<resources>
    <string name="app_name">NotificationDrawerDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mark_all_read">Mark all Read</string>
    <string name="clear_all">Clear All</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="slideshow">Slideshow</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="sign_up">Sign Up</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
</resources>
