<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_action_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/setting"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_aboutUs"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_policy"
                android:title="Policy" />
        </menu>
    </item>

</menu>
